itinerary initial commit

--- a/hige/.tmp/serve/index.html
+++ b/hige/.tmp/serve/index.html
@@ -73,24 +73,25 @@
     <!-- bower:js -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/angular/angular.js"></script>
-    <script src="../bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="../bower_components/angular-touch/angular-touch.js"></script>
-    <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="../bower_components/angular-resource/angular-resource.js"></script>
-    <script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="../bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="../bower_components/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
+    <script src="../bower_components/angular-resource/angular-resource.js"></script>
+    <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="../bower_components/angular-soap/soapclient.js"></script>
+    <script src="../bower_components/angular-soap/angular.soap.js"></script>
+    <script src="../bower_components/angular-touch/angular-touch.js"></script>
+    <script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="../bower_components/angular-ui-utils/ui-utils.js"></script>
+    <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/browser-detection/browser-detection.js"></script>
     <script src="../bower_components/browserdetection/src/browser-detection.js"></script>
     <script src="../bower_components/FlashDetect/FlashDetect.js"></script>
-    <script src="../bower_components/angular-ui-utils/ui-utils.js"></script>
-    <script src="../bower_components/underscore/underscore.js"></script>
-    <script src="../bower_components/momentjs/moment.js"></script>
-    <script src="../bower_components/respond/dest/respond.src.js"></script>
-    <script src="../bower_components/angular-soap/soapclient.js"></script>
-    <script src="../bower_components/angular-soap/angular.soap.js"></script>
     <script src="../bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.js"></script>
     <script src="../bower_components/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
+    <script src="../bower_components/momentjs/moment.js"></script>
+    <script src="../bower_components/respond/dest/respond.src.js"></script>
+    <script src="../bower_components/underscore/underscore.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -101,19 +102,20 @@
     <script src="commons/services/user/user.service.js"></script>
     <script src="commons/services/ui/ui.service.js"></script>
     <script src="commons/services/geoJson/geoJson.service.js"></script>
-    <script src="commons/services/config/config.service.js"></script>
     <script src="commons/services/featureType/featureType.service.js"></script>
+    <script src="commons/services/config/config.service.js"></script>
     <script src="commons/services/call2api/call2api.service.js"></script>
     <script src="commons/directives/touchSref/touchSref.directive.js"></script>
     <script src="commons/directives/theme/theme.directive.js"></script>
-    <script src="commons/directives/menuDetector/menuDetector.directive.js"></script>
     <script src="commons/directives/polyfills/inputDisabledPolyfill.js"></script>
+    <script src="commons/directives/menuDetector/menuDetector.directive.js"></script>
     <script src="commons/directives/map/map.directive.js"></script>
     <script src="commons/directives/dropdown/dropdown.directive.js"></script>
     <script src="commons/components/alert/alert.controller.js"></script>
-    <script src="components/navbar/navbar.controller.js"></script>
     <script src="app/maps/maps.controller.js"></script>
     <script src="app/main/main.controller.js"></script>
+    <script src="app/itinerary/itinerary.controller.js"></script>
+    <script src="components/navbar/navbar.controller.js"></script>
     <script src="app/edit/edit.controller.js"></script>
     <script src="commons/env.js"></script>
     <!-- endinject -->
