--- a/hige/.tmp/serve/index.html
+++ b/hige/.tmp/serve/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
+    <script src="https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js"></script>
 
     <!-- <link rel="stylesheet" href="https://raw.githubusercontent.com/Leaflet/Leaflet.markercluster/master/dist/MarkerCluster.css">
     <script src="https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js"></script> -->
@@ -24,8 +25,6 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="../bower_components/fontawesome/css/font-awesome.css" />
     <link rel="stylesheet" href="../bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.css" />
-    <link rel="stylesheet" href="../bower_components/leaflet.markercluster/dist/MarkerCluster.css" />
-    <link rel="stylesheet" href="../bower_components/leaflet.markercluster/dist/MarkerCluster.Default.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -88,7 +87,6 @@
     <script src="../bower_components/browserdetection/src/browser-detection.js"></script>
     <script src="../bower_components/FlashDetect/FlashDetect.js"></script>
     <script src="../bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.js"></script>
-    <script src="../bower_components/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
     <script src="../bower_components/momentjs/moment.js"></script>
     <script src="../bower_components/respond/dest/respond.src.js"></script>
     <script src="../bower_components/underscore/underscore.js"></script>
@@ -107,11 +105,11 @@
     <script src="commons/services/call2api/call2api.service.js"></script>
     <script src="commons/directives/touchSref/touchSref.directive.js"></script>
     <script src="commons/directives/theme/theme.directive.js"></script>
+    <script src="commons/directives/dropdown/dropdown.directive.js"></script>
     <script src="commons/directives/polyfills/inputDisabledPolyfill.js"></script>
     <script src="commons/directives/menuDetector/menuDetector.directive.js"></script>
     <script src="commons/directives/map/map.directive.js"></script>
     <script src="commons/components/alert/alert.controller.js"></script>
-    <script src="commons/directives/dropdown/dropdown.directive.js"></script>
     <script src="components/navbar/navbar.controller.js"></script>
     <script src="app/maps/maps.controller.js"></script>
     <script src="app/main/main.controller.js"></script>
